* Updated stringdocs

Version 1.0.1
* Fixed small bug in the parsing of the umi quality parameter

Version 1.0.2
* If no temp folder is given a new unique one is created on top of the execution folder
* integrate createDataset.py into the code of the pipeline
* Adjusted some parameters names and descriptions (no UMI is default)
* Added sliding window when counting unique molecules
* Added support to bzip

Version 1.0.3
* Fixed a minor bug in the counting of UMIs or - strand

Version 1.0.4
* When removing adaptors (homopolymers streches) allow to up to 3 missmatches
* Added GC content filter (same % as AT content)

Version 1.1.0
* Added flag to discard reads mapping to anti-sense strand
* Parameters for GC content filter instead of using the same value as AT content filter
* Fixed a small bug in the logging of some parameters

Version 1.1.1
* Simplified the two pass mode

Version 1.1.5
* Removed some un-necessary parameters

Version 1.1.6
* Fixed bug that would leave some files in /tmp
* Allowed mis-matches when removing adaptors is now 2

Version 1.1.7
* Make sure to remove tmp files even if an error happens

Version 1.2.0
* Fixed a small bug in the deletion of the tmp folder

Version 1.2.1
* Made homopolymers filters enabled by default
* Added a test dataset to the docs

Version 1.2.2
* Fixed bugs in convertEnsemblToNames
* Added some parameters for TaggD demultiplexing
* Bumped version of TaggD

Version 1.2.3
* Bumped TaggD version
* Added more stats to the dataset output
* Added scripts to compute stats
* Added new option for TaggD

Version 1.2.4
* Fixed small bugs
* Small improvements in st_qa.py and convertEnsemblToNames.py

Version 1.2.5
* Changed the limit range of some parameters

Version 1.2.6
* Take into account soft-clipped bases when computing start/end positions

Version 1.3.0
* Added more methods to cluster UMIs
* Optimized the UMI counting algorithm
* Optimized the memory use

Version 1.3.1
* Homopolymer miss-matches is a parameter now