@@ -401,3 +401,4 @@ Version 1.3.0
 
 Version 1.3.1
 * Homopolymer miss-matches is a parameter now
+* Removing now also PolyNs (parameter)
